; ModuleID = '/home/carl/AnghaBench/linux/tools/testing/selftests/bpf/prog_tests/extr_bpf_verif_scale.c_check_load.c'
source_filename = "/home/carl/AnghaBench/linux/tools/testing/selftests/bpf/prog_tests/extr_bpf_verif_scale.c_check_load.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bpf_prog_load_attr = type { i8*, i32, i32, i32 }
%struct.bpf_object = type { i32 }

@BPF_F_TEST_RND_HI32 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32)* @check_load to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @check_load(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.bpf_prog_load_attr, align 8
  %6 = alloca %struct.bpf_object*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  store %struct.bpf_object* null, %struct.bpf_object** %6, align 8
  %9 = call i32 @memset(%struct.bpf_prog_load_attr* %5, i32 0, i32 24)
  %10 = load i8*, i8** %3, align 8
  %11 = getelementptr inbounds %struct.bpf_prog_load_attr, %struct.bpf_prog_load_attr* %5, i32 0, i32 0
  store i8* %10, i8** %11, align 8
  %12 = load i32, i32* %4, align 4
  %13 = getelementptr inbounds %struct.bpf_prog_load_attr, %struct.bpf_prog_load_attr* %5, i32 0, i32 1
  store i32 %12, i32* %13, align 8
  %14 = getelementptr inbounds %struct.bpf_prog_load_attr, %struct.bpf_prog_load_attr* %5, i32 0, i32 2
  store i32 4, i32* %14, align 4
  %15 = load i32, i32* @BPF_F_TEST_RND_HI32, align 4
  %16 = getelementptr inbounds %struct.bpf_prog_load_attr, %struct.bpf_prog_load_attr* %5, i32 0, i32 3
  store i32 %15, i32* %16, align 8
  %17 = call i32 @bpf_prog_load_xattr(%struct.bpf_prog_load_attr* %5, %struct.bpf_object** %6, i32* %8)
  store i32 %17, i32* %7, align 4
  %18 = load %struct.bpf_object*, %struct.bpf_object** %6, align 8
  %19 = call i32 @bpf_object__close(%struct.bpf_object* %18)
  %20 = load i32, i32* %7, align 4
  ret i32 %20
}

declare dso_local i32 @memset(%struct.bpf_prog_load_attr*, i32, i32) #1

declare dso_local i32 @bpf_prog_load_xattr(%struct.bpf_prog_load_attr*, %struct.bpf_object**, i32*) #1

declare dso_local i32 @bpf_object__close(%struct.bpf_object*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
